--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
     <groupId>com.example</groupId>
     <artifactId>grf</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
