--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,10 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.0-beta9</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
